# project-subway

./: .gitignore  G18_ace11b27-30ca-4bf1-b13a-c612acf771e3 - Report.csv  Makefile  PROJECT_GUIDELINES.md  README.md  example_commands.sh  mkdocs.yml  pyproject.toml
data/: G18_6fdba5a3-f1ce-4920-aec6-84f58d155892.xlsx  transactions_all.csv
data/from_pos/transactions/: G18_e082394e-371e-46be-bfb1-91ced4efac43.xlsx
data/invoices/: invoices.csv  invoices.tsv
data/transactions/: 2025-11-17.csv  2025-11-18.csv  2025-11-19.csv  2025-11-20.csv  2025-11-21.csv  2025-11-22.csv  2025-11-23.csv  2025-11-24.csv  2025-11-25.csv  2025-11-26.csv  2025-11-27.csv  2025-11-28.csv  2025-11-29.csv  2025-11-30.csv  2025-12-01.csv  2025-12-02.csv  2025-12-03.csv  2025-12-04.csv  2025-12-05.csv  2025-12-06.csv  2025-12-07.csv  2025-12-08.csv  2025-12-09.csv  2025-12-10.csv  2025-12-11.csv  2025-12-12.csv  2025-12-13.csv  2025-12-14.csv  2025-12-15.csv  2025-12-16.csv  2025-12-17.csv  2025-12-18.csv  2025-12-19.csv  2025-12-20.csv  2025-12-21.csv  2025-12-22.csv  2025-12-23.csv  2025-12-24.csv  2025-12-25.csv  2025-12-26.csv  (+42 more)
data/weather/cwa/: 202512031600.QPESUMS_AUTO_STATION.10M.xml  202512031700.QPESUMS_AUTO_STATION.10M.xml  (+1342 more)
data/working_hours/: 2025-12-googlesheet.csv  2026-01-googlesheet.csv  2026-02-googlesheet.csv
docs/: index.md
docs/01-product/: features.md  overview.md  planning.md  requirements.md
docs/02-architecture/: data-model.md  system-design.md
progress/: README.md
progress/backlog/: W1.md
progress/done/: W1.md
progress/in-progress/: W1.md
scripts/: aggregate_transaction_from_pos.py  fetch_weather_info.py  generate_working_hours_gantt.py  scan_invoice_qr.py
tests/utilities/: test_tw_einvoice_qr.py
utilities/: __init__.py  trim_filenames.py  tw_einvoice_qr.py
