[tool.poetry]
name = "project-subway"
version = "0.1.0"
description = ""
authors = ["Chieh Lee <chieh.lee@dotdata.com>"]
readme = "README.md"
packages = [{include = "project_subway"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
matplotlib = "^3.10.8"
pandas = "^2.3.3"
requests = "^2.32.5"
certifi = "^2025.11.12"
openpyxl = "^3.1.5"
opencv-python = "^4.10.0.84"
pyzbar = "^0.1.9"
zxing-cpp = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
